EX-1142 fix image alignment issues

--- a/src/editor/blocks/table/editor.scss
+++ b/src/editor/blocks/table/editor.scss
@@ -23,31 +23,4 @@
 			margin-bottom: 0;
 		}
 	}
-
-	&__column {
-
-		&.alignleft {
-
-			figure {
-				display: flex;
-				justify-content: flex-start;
-			}
-		}
-
-		&.aligncenter {
-
-			figure {
-				display: flex;
-				justify-content: center;
-			}
-		}
-
-		&.alignright {
-
-			figure {
-				display: flex;
-				justify-content: flex-end;
-			}
-		}
-	}
 }
