--- a/src/front-end/table/index.scss
+++ b/src/front-end/table/index.scss
@@ -16,14 +16,32 @@
 
 		&.alignleft {
 			text-align: left;
+
+			figure {
+				display: flex;
+				flex-direction: column;
+				align-items: flex-start;
+			}
 		}
 
 		&.aligncenter {
 			text-align: center;
+
+			figure {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+			}
 		}
 
 		&.alignright {
 			text-align: right;
+
+			figure {
+				display: flex;
+				flex-direction: column;
+				align-items: flex-end;
+			}
 		}
 	}
 
